@@ -17,6 +17,7 @@
         You should have received a copy of the GNU General Public License
         along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
+
 from __future__ import absolute_import
 
 import re, hashlib, time
@@ -27,7 +28,9 @@ from tulip.compat import str, database
 
 # noinspection PyUnboundLocalVariable
 def get(function_, time_out, *args, **table):
+
     try:
+
         response = None
 
         f = repr(function_)
@@ -37,7 +40,9 @@ def get(function_, time_out, *args, **table):
         for i in args:
             a.update(str(i))
         a = str(a.hexdigest())
+
     except Exception:
+
         pass
 
     try:
@@ -46,6 +51,7 @@ def get(function_, time_out, *args, **table):
         table = 'rel_list'
 
     try:
+
         control.makeFile(control.dataPath)
         dbcon = database.connect(control.cacheFile)
         dbcur = dbcon.cursor()
@@ -62,25 +68,31 @@ def get(function_, time_out, *args, **table):
         update = (abs(t2 - t1) / 3600) >= int(time_out)
         if not update:
             return response
+
     except Exception:
+
         pass
 
     try:
+
         r = function_(*args)
         if (r is None or r == []) and response is not None:
             return response
         elif r is None or r == []:
             return r
+
     except Exception:
         return
 
     try:
+
         r = repr(r)
         t = int(time.time())
         dbcur.execute("CREATE TABLE IF NOT EXISTS {} (""func TEXT, ""args TEXT, ""response TEXT, ""added TEXT, ""UNIQUE(func, args)"");".format(table))
         dbcur.execute("DELETE FROM {0} WHERE func = '{1}' AND args = '{2}'".format(table, f, a))
         dbcur.execute("INSERT INTO {} Values (?, ?, ?, ?)".format(table), (f, a, r, t))
         dbcon.commit()
+
     except Exception:
         pass
 
