@@ -10,6 +10,7 @@
 - Request function enhancements for python 3
 - Directory module bugfixes
 - Added replace xml codes function
+- Youtube module performance tweaks
 - Various other tweaks
 
 [B]2.2.X[/B]
